--- a/static/css/responsive.css
+++ b/static/css/responsive.css
@@ -89,6 +89,9 @@
     #landing-heading h1 {
         font-size: 3.8rem;
     }
+    .landing-card-content {
+        padding: 20px 10px 20px 20px;
+    }
     #background-blobs {
         top: 2vw;
     }
